--- a/orgLayout.ui
+++ b/orgLayout.ui
@@ -32,7 +32,14 @@
        </widget>
       </item>
       <item>
-       <widget class="QLCDNumber" name="lcdNumber"/>
+       <widget class="QLCDNumber" name="lcdNumber">
+        <property name="maximumSize">
+         <size>
+          <width>150</width>
+          <height>70</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
